# claude-watch

./: .cursorrules  .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  PRE-FILTER-PROPOSAL-2026-05-12.md  README.md  build.rs  claude-watch-metrics  claude-watch.service  config.toml  dashboard  dashboard-lib.sh  dashboard-refit  test-redeploy-cw.sh  test-redeploy.sh
.cargo/: config.toml
.config/: nextest.toml
.githooks/: pre-commit
.github/: copilot-instructions.md
container/: Dockerfile  README.md  baked-CLAUDE.md  claude-tools.profile.sh  claude-watch.config.toml  compose.yml  entrypoint.sh  process-compose.yml  watchers.conf
docs/: adding-watchers.md  agent-msg.md  cron-toggle.md  dashboard-layout.md  event-must-act.md  events.md  hooks.md  queue.md  sse-protocol.md  tips-faq.md  two-channel-design.md  watchers.md
examples/: emit_test_event.rs  test_auto_restart.rs
queue-minisite/: Dockerfile  README.md  app.py  claude_agents.py  obligations  test_cr_lf_split.py  test_depend.py  test_errored_hostjob.py  test_force_start.py  test_header_collapse.py  test_hostjob_done_log.py  test_hostjob_status_reconcile.py  test_hostjob_stream.py  test_hostjob_visibility.py  test_live_stream.py  test_live_tail_cr_progress.py  test_meta.py  test_read_queue.py  test_source_filter.py  test_subagent_stream.py  test_task_scope_deps.py  test_workload_archive.py
scripts/: check-claude-md-size.py  check-doc-links.py  install-hooks.sh
skills/: setup-hooks.md
src/: active_agents.rs  agent.rs  alert.rs  cadence.rs  cmd.rs  config.rs  event_bus.rs  lib.rs  (+23 more)
(+256 files in other folders)
