[package]
name = "claude-watch"
version = "0.1.0"
edition = "2021"
description = "Persistent daemon that monitors Claude Code health via tmux observation"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
nix = { version = "0.29", features = ["signal"] }
regex-lite = "0.1"
clap = { version = "4", features = ["derive"] }
notify = "7"
libc = "0.2"
sha2 = "0.10"
tree-sitter = "0.26"
tree-sitter-bash = "0.25"

[dev-dependencies]
filetime = "0.2"
libc = "0.2"
serde_json = "1"
tempfile = "3"

[profile.release]
strip = true
lto = true
